FE:fix: fix dark mode styling

--- a/src/components/common/CheckBox.module.scss
+++ b/src/components/common/CheckBox.module.scss
@@ -34,7 +34,6 @@
 }
 
 .label {
-  color: clr(tertiary-clr);
   font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
