--- a/src/components/common/LabelTextArea.module.scss
+++ b/src/components/common/LabelTextArea.module.scss
@@ -16,6 +16,7 @@
   border-radius: 0.5rem;
   background-color: clr(white-clr, light);
   font-size: 1rem;
+  color: clr(tertiary-clr);
 
   transition: border ease-in-out 0.2s;
 
